--- a/lab1/report.tex
+++ b/lab1/report.tex
@@ -41,19 +41,58 @@
 \begin{enumerate}
 	\item Βρίσκουμε τα σημεία Α, Β του pointcloud που έχουν μικρότερο και μεγαλύτερο X αντίστοιχα
 	\item Σχηματίζουμε τα ευθύγραμμα τμήματα ΑΒ και ΒΑ
-	\item Καλούμε τη συνάρτηση F δύο φορές με ορίσματα τα σημεί
+	\item Καλούμε τη συνάρτηση F δύο φορές με ορίσματα Α,Β,pointcloud και Β,Α,pointcloud αντίστοιχα
 	\item Συνάρτηση F(S, E, pointcloud)
+
 	\begin{enumerate}
-	\item \label{repeat} Με δεδομένα δύο σημεία S, E βρίσκουμε το σημείο P που βρίσκεται αριστερά από το ευθύγραμμο τμήμα SE και απέχει περισσότερο από αυτό
-	\item Σχεδιάζουμε τα ευθύγραμμα τμήματα SP και PE και βρίσκουμε το σύνολο των σημείων που βρίσκεται αριστερά από αυτά τα ευθύγραμμα τμήματα
-	\item Αν ένα από αυτά τα σύνολα είναι κενά τότε το P ανήκει στο Convex Hull οπότε το αποθηκεύουμε σε μια λίστα
-	\item goto \ref{repeat} για τα
+		\item Αν το pointcloud είναι κενό η συνάρτηση τερματίζει
+		\item Με δεδομένα δύο σημεία S, E βρίσκουμε το σημείο P που βρίσκεται αριστερά από το κατευθυνόμενο ευθύγραμμο τμήμα SE και απέχει περισσότερο από αυτό
+		\item Το P ανήκει στο Convex Hull οπότε το αποθηκεύουμε σε μια λίστα
+		\item Σχεδιάζουμε τα ευθύγραμμα τμήματα SP και PE και βρίσκουμε το σύνολο των σημείων Q που βρίσκεται αριστερά από το SP και το σύνολο των σημείων R που βρίσκεται αριστερά από το PE
+		\item Καλούμε αναδρομικά την συνάρτηση F με ορίσματα S,P,Q και μια δεύτερη φορά με ορίσματα P,E,R
+	\end{enumerate}
+
+	\item Στο τέλος αυτής της διαδικασίας έχουμε μια λίστα που περιέχει όλα τα σημεία του pointcloud που ανήκουν στο Convex Hull
+
 \end{enumerate}
 
 \subsection{Jarvis Match}
 
+\begin{enumerate}
+	\item Βρίσκουμε το σημείο του P pointcloud που έχει το μικρότερο X
+	\item Προσθέτουμε το σημείο σε μια λίστα αφού αυτό ανήκει στο Convex Hull
+	\item \label{repeat} Διαλέγουμε τυχαία ένα σημείο Q του pointcloud
+	\item \label{checkpoint} Σχηματίζουμε το ευθύγραμμο τμήμα PQ και βρίσκουμε το σύνολο R των σημείων που βρίσκονται στα αριστερά αυτού του ευθύγραμμου τμήματος
+	\item Αν το σύνολο δεν R είναι κενό διαλέγουμε ένα καινούριο τυχαίο σημείο Q από το σύνολο R και επαναλαμβάνουμε το βήμα \ref{checkpoint}
+	\item Αλλιώς το σημείο Q ανήκει στο Convex Hull οπότε το προσθέτουμε στη λίστα
+	\item Αν το σημείο Q είναι το σημείο στην αρχή της λίστας σημείων του Convex Hull τότε η διαδικασία τερματίζει και έχουμε βρει ολόκληρο το Convex Hull
+	\item Αλλιώς μετονομάζουμε το Q σε P και πηγαίνουμε στο βήμα \ref{repeat}
+\end{enumerate}
+
 \section{Τμήμα Convex Hull φανερό από ένα σημείο}
 
+Με δεδομένο ένα σημείο A εκτός του Convex Hull εκτελούμε την εξής διαδικασία για κάθε σημείο B του Convex Hull
+\begin{enumerate}
+	\item Σχηματίζουμε το διάνυσμα V που ξεκινάει από το σημείο A και καταλήγει στο σημείο B και βρίσκουμε το διάνυσμα U που είναι κάθετο στο V
+	\item Βρίσκουμε το σημείο C που βρίσκεται στη θέση V+U
+	\item Σχηματίζουμε τα ευθύγραμμα τμήματα AB και BC
+	\item Βρίσκουμε το σύνολο R0 των σημείων του Convex Hull που βρίσκεται στα δεξιά του BC
+	\item Βρίσκουμε το σύνολο R1 των σημείων του R0 που βρίσκεται στα αριστερά του AB και το σύνολο R2 των σημείων που βρίσκεται στα δεξιά του ΑΒ
+	\item Αν το R1 ή το R2 είναι κενό τότε το σημείο Β είναι ορατό από το σημείο Α οπότε το προσθέτουμε στη λίστα των ορατών σημείων
+\end{enumerate}
+
+\noindent
+Στο τέλος της διαδικασίας έχουμε μια λίστα με σημεία του Convex Hull τα οποία είναι ορατά από το σημείο A
+
 \section{Σύγκριση χρόνου εκτέλεσης αλγορίθμων Convex Hull}
+
+\includegraphics[width=\textwidth]{"algorithm plot.png"}
+
+\noindent
+Παρατηρούμε ότι στους αλγόριθμους Graham Scan και Quickhull ο χρόνος εκτέλεσης αυξάνεται γραμμικά με τον αριθμό
+των σημείων του pointcloud (με τον αλγόριθμο quickhull να είναι πιο γρήγορος σε σχέση με τον αλγόριθμο
+Graham Scan), ενώ ο χρόνος εκτέλεσης του αλγόριθμου Jarvis Match αυξάνεται με μη γραμμικό τρόπο λόγω του ότι
+η πολυπλοκότητα αυτού του αλγόριθμου εξαρτάται από την έξοδό του, δηλαδή τον αριθμό των σημείων που ανήκουν
+στο Convex Hull
 
 \end{document}
