write lab2 report

--- a/lab2/report.tex
+++ b/lab2/report.tex
@@ -98,7 +98,7 @@ $ Ax = b$
 Προσθέτουμε τα τρίγωνα αυτά στις γεωμετρίες που εμφανίζουμε στην οθόνη και αφαιρούμε τα
 αρχικά τρίγωνα
 
-\section{Overlapping Triangles}
+\section{Overlapping Triangles αρχείο main.py}
 Με δεδομένα τα σημεία από δύο τρίγωνα βρίσκουμε την περιοχή επικάλυψης αυτών των δύο με
 την εξής μέθοδο:
 
