--- a/lab5/report.tex
+++ b/lab5/report.tex
@@ -6,6 +6,7 @@
 
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{subcaption}
 
 \usepackage{fontspec}
 \setmainfont{DejaVuSansM Nerd Font}
@@ -39,7 +40,7 @@ n διανύσματα και ένα σύνολο ακμών E που αποτε
 \end{itemize}
 
 \noindent
-Το Laplacian Smooting θα εφαρμοστεί για κάθε κορυφή χρησιμοποιώντας τον τύπο
+Το Laplacian Smoothing θα εφαρμοστεί για κάθε κορυφή χρησιμοποιώντας τον τύπο
 \[p_i^{t+1} = p_i^{t} - \lambda Lp_i^{t}\]
 όπου $p_i^{t}$ είναι η ι-οστή κορυφή του mesh πριν την εξομάλυνση, $p_i^{t+1}$ η ίδια
 κορυφή μετά την εξομάλυνση και $\lambda \in (0, 1)$ ο συντελεστής εξομάλυνσης.
@@ -50,8 +51,46 @@ n διανύσματα και ένα σύνολο ακμών E που αποτε
 επίπεδα εξομάλυνσης, ενώ όσο το $\lambda$ πλησιάζει στο 1 τόσο πιο μεγάλη είναι η
 εξομάλυνση σε κάθε επανάληψη.
 
+\section{Taubin Smoothing}
+Η διαδικασία του Laplacian Smoothing όμως έχει ένα πρόβλημα. Ο τρόπος με τον οποίο
+λειτουργεί αυτού του είδους η εξομάλυνση προκαλεί μια συρρίκνωση του μοντέλου σε
+κάθε επανάληψη. Έτσι μετά από πολλές επαναλήψεις το μοντέλο καταλήγει να χάνει
+τον όγκο του και εν τέλει να είναι ομαλό, αλλά όχι όμοιο με το αρχικό.
 
-\section{Taubin Smooting}
+Το πρόβλημα αυτό έρχεται να λύσει η διαδικασία του Taubin smoothing η οποία λειτουργεί
+με παρόμοιο τρόπο όπως το Laplacian Smoothing. Έχουμε τα ίδια δεδομένα και υπολογίζουμε
+τους ίδιους πίνακες όμως όταν έρθει η ώρα να κάνουμε τις επαναλήψεις εξομάλυνσης
+υπάρχει μια μικρή διαφορά.
 
+Σε κάθε επανάληψη εφαρμόζουμε τον ίδιο τύπο όπως και στο Laplacian Smoothing
+\[p_i^{t+1} = p_i^{t} - \lambda Lp_i^{t}\]
+στη συνέχεια όμως εφαρμόζουμε και τον εξής τύπο:
+\[p_i^{t+1} = p_i^{t} + \mu Lp_i^{t}\]
+ο τύπος αυτός είναι πολύ παρόμοιος με τον αρχικό με τη διαφορά ότι αντί να αφαιρεί την
+τιμή $\lambda Lp_i^{t}$, προσθέτει την τιμή $\mu Lp_i^{t}$, δηλαδή αντί να συρρικνώνει
+το μοντέλο το μεγεθύνει. Έτσι ο πρώτος τύπος εξομαλύνει το μοντέλο με συρρίκνωση, ο
+δεύτερος το εξομαλύνει με μεγέθυση, άρα ο συνδυασμός τους καταφέρνει εξομάλυνση του
+μοντέλου χωρίς αλλαγή στον όγκο του. Οι τιμές $\lambda \in (0, 1)$ και $\mu \in (0, 1)$
+είναι οι συντελεστές της εξομάλυνσης και καθορίζουν τον βαθμό επιρροής του πρώτου και
+του δεύτερου τύπου στην διαδικασία.
+
+\section{Παραδείγματα}
+
+\begin{figure}[h]
+	\center
+	\includegraphics[width=0.5\textwidth]{"1.png"}
+	\caption{Αρχικό μοντέλο}
+\end{figure}
+\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"2.png"}
+		\caption{Laplacian Smoothing, $\lambda = 0.5$}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"3.png"}
+		\caption{Taubin smooting, $\lambda = 0.5, \mu = 0.5$}
+	\end{subfigure}
+	\caption{10 επαναλήψεις}
+\end{figure}
 
 \end{document}
