--- a/lab5/report.tex
+++ b/lab5/report.tex
@@ -81,6 +81,7 @@ n διανύσματα και ένα σύνολο ακμών E που αποτε
 	\includegraphics[width=0.5\textwidth]{"1.png"}
 	\caption{Αρχικό μοντέλο}
 \end{figure}
+
 \begin{figure}[h]
 	\begin{subfigure}{0.5\textwidth}
 		\includegraphics[width=0.9\linewidth]{"2.png"}
@@ -89,6 +90,42 @@ n διανύσματα και ένα σύνολο ακμών E που αποτε
 	\begin{subfigure}{0.5\textwidth}
 		\includegraphics[width=0.9\linewidth]{"3.png"}
 		\caption{Taubin smooting, $\lambda = 0.5, \mu = 0.5$}
+	\end{subfigure}
+	\caption{10 επαναλήψεις}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"8.png"}
+		\caption{Laplacian Smoothing, $\lambda = 0.5$}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"9.png"}
+		\caption{Taubin smooting, $\lambda = 0.5, \mu = 0.5$}
+	\end{subfigure}
+	\caption{20 επαναλήψεις}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"4.png"}
+		\caption{Laplacian Smoothing, $\lambda = 0.8$}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"5.png"}
+		\caption{Taubin smooting, $\lambda = 0.8, \mu = 0.8$}
+	\end{subfigure}
+	\caption{10 επαναλήψεις}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"6.png"}
+		\caption{Taubin smooting, $\lambda = 0.6, \mu = 0.8$}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"7.png"}
+		\caption{Taubin smooting, $\lambda = 0.8, \mu = 0.6$}
 	\end{subfigure}
 	\caption{10 επαναλήψεις}
 \end{figure}
