--- a/final/report.tex
+++ b/final/report.tex
@@ -2,7 +2,7 @@
 
 \usepackage[greek]{babel}
 
-\usepackage[a4paper, margin=1.15in]{geometry}
+\usepackage[a4paper, margin=1.10in]{geometry}
 
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -20,42 +20,118 @@
 
 \maketitle
 
-\section{Εισαγωγή}
+\tableofcontents
+\newpage
 
-\section{Laplacian Matrix}
+\section{Σκοπός της εργασίας}
+Η παρούσα εργασία έχει ως σκοπό την εξερεύνηση μεθόδων για την ανάλυση ενός τρισδιάστατου
+μοντέλου με βάση τις συχνοτικές του ιδιότητες και ύστερα για την επεξεργασία αυτού του
+μοντέλου χρησιμοποιώντας τις ιδιότητες αυτές. Στην πρώτη φάση της ανάλυσης θα
+χρησιμοποιηθούν τεχνικές όπως η εύρεση του Laplacian Matrix του μοντέλου, η ανάλυση
+ιδιοδιανυσμάτων αυτού του πίνακα και η οπτικοποίηση των αποτελεσμάτων, προκειμένου να
+βρεθούν και να αναδειχθούν οι συχνοτικές συνιστώσες που αποτελούν το μοντέλο. Ύστερα,
+αφού πρώτα προστεθεί τεχνητός θόρυβος στο μοντέλο, θα γίνει εξομάλυνση (smoothing) του
+μοντέλου, χρησιμοποιώντας τις συνιστώσες που βρέθηκαν προηγουμένως, με την τεχνική της
+αφαίρεσης των υψίσυχνων συνιστωσών του μοντέλου. Τέλος, εκτελώντας την ίδια διαδικασία
+ανάλυσης σε πολλά μοντέλα, θα χρησιμοποιηθούν οι χαμηλόσυχνες και υψίσυχνες συνιστώσες
+κάθε μοντέλου προκειμένου να βρεθούν μοντέλα με όμοια σχήματα και όμοιες επιφανειακές
+λεπτομέρειες αντίστοιχα.
+
+\section{Συχνοτική Ανάλυση}
+
+\subsection{Laplacian Matrix}
+Πρώτο βήμα στη συχνοτική ανάλυση ενός μοντέλου είναι η εύρεση του πίνακα Laplace. Πάνω
+στον πίνακα αυτό είναι που θα πραγματοποιηθεί ανάλυση ιδιοδιανυσμάτων για να προκύψουν οι
+συχνοτικές συνιστώσες. Αυτή η διαδικασία μπορεί να παρομοιαστεί με τον μετασχηματισμό
+Fourier που χρησιμοποιείται στην ανάλυση σημάτων, με την έννοια ότι και στις δύο
+περιπτώσεις τα δεδομένα μετασχηματίζονται από το το πεδίο του χώρου και του χρόνου
+αντίστοιχα, στο πεδίο της συχνότητας
+
+Ο Laplacian Matrix μπορεί να υπολογιστεί με διάφορους τρόπους.
+Υπάρχουν δύο βασικές κατηγορίες,
+αυτοί που υπολογίζονται με βάση μόνο τη συνδεσιμότητα των κορυφών του μοντέλου,
+οι οποίου ονομάζονται συνδυαστικοί (combinatorial),
+και αυτοί που στον υπολογισμό τους λαμβάνεται υπ' όψη και η γεωμετρία του μοντέλου,
+δηλαδή η θέση των κορυφών και όχι μόνο πως συνδέονται,
+οι οποίοι ονομάζονται γεωμετρικοί (geometric).
+
+Σε αυτή την εργασία έχουν χρησιμοποιηθεί δύο μέθοδοι για την εύρεση του Laplacian Matrix.
+Είναι οι Graph Laplacian Matrix και Tutte Laplacian Matrix
+
+\subsubsection{Graph Laplacian Matrix}
+Για τον υπολογισμό του Graph Laplacian χρειάζονται δύο άλλοι πίνακες:
+\begin{enumerate}
+	\item Adjacency Matrix που ορίζεται ως
+		\[
+			A_i_j = \begin{cases}
+				1 \quad if \; (i, j) \in E \\
+				0 \quad otherwise
+			\end{cases}
+		\]
+
+		Όπου δηλαδή σε για κάθε κορυφή i, j αν υπάρχει ακμή μεταξύ τους
+		(αν το ζεύγος (i,j) βρήσκεται στο σύνολο Ε των ακμών)
+		τότε στις θέσεις [i, j] και [j, i] του πίνακα Α τοποθετείται ο αριθμός 1,
+		αλλιώς τοποθετείται ο αριθμός 0
+
+	\item Degree Matrix που ορίζεται ως
+		\[
+			D_i_j = \begin{cases}
+				N(i) \quad if \ i=j \\
+				0 \quad otherwise
+			\end{cases}
+		\]
+
+		και $N(i)$ ο αριθμός των κορυφών με τους οποίους γειτονεύει η κορυφή $i$
+\end{enumerate}
+
+\noindent
+Έχοντας τους δύο συστατικούς πίνακες εν τέλει ο Laplacian πίνακας ορίζεται ως:
+
+\[
+	L = D - A
+\]
+
+\subsubsection{Tutte Laplacian Matrix}
+Ο Tutte Laplacian Matrix ορίζεται παρόμοια με τον Graph Laplacian
+λόγω του ότι χρησιμοποιεί και αυτός τους πίνακες Adjacency και Degree,
+αλλά ο τελικός τύπος είναι:
+
+\[
+	L = D^{-1}A
+\]
+
+\subsection{Ανάλυση Ιδιοδιανυσμάτων}
 
 
-\section{Eigendecomposition}
+\subsection{Οπτικοποίηση Ιδιοδιανυσμάτων}
 
 
-\section{Visualization}
-
-
-\section{Noise}
+\section{Προσθήκη θορύβου}
 
 \subsection{Gaussian noise}
 
 \subsection{Perlin noise}
 
 
-\section{Mesh simplification}
+\section{Εξομάλυνση μοντέλου}
 
 
-\section{Coating signature and search}
+\section{Εύρεση όμοιων επιστρώσεων}
 
 
-\section{Object-based similarity}
+\section{Εύρεση όμοιων αντικειμένων}
 
-\begin{figure}[h]
-	\begin{subfigure}{0.5\textwidth}
-		\includegraphics[width=0.9\linewidth]{"6.png"}
-		\caption{Taubin smooting, $\lambda = 0.6, \mu = 0.8$}
-	\end{subfigure}
-	\begin{subfigure}{0.5\textwidth}
-		\includegraphics[width=0.9\linewidth]{"7.png"}
-		\caption{Taubin smooting, $\lambda = 0.8, \mu = 0.6$}
-	\end{subfigure}
-	\caption{10 επαναλήψεις}
-\end{figure}
+% \begin{figure}[h]
+% 	\begin{subfigure}{0.5\textwidth}
+% 		\includegraphics[width=0.9\linewidth]{"6.png"}
+% 		\caption{Taubin smooting, $\lambda = 0.6, \mu = 0.8$}
+% 	\end{subfigure}
+% 	\begin{subfigure}{0.5\textwidth}
+% 		\includegraphics[width=0.9\linewidth]{"7.png"}
+% 		\caption{Taubin smooting, $\lambda = 0.8, \mu = 0.6$}
+% 	\end{subfigure}
+% 	\caption{10 επαναλήψεις}
+% \end{figure}
 
 \end{document}
