--- a/final/report.tex
+++ b/final/report.tex
@@ -25,7 +25,7 @@
 
 \section{Σκοπός της εργασίας}
 Η παρούσα εργασία έχει ως σκοπό την εξερεύνηση μεθόδων για την ανάλυση ενός τρισδιάστατου
-μοντέλου με βάση τις συχνοτικές του ιδιότητες και ύστερα για την επεξεργασία αυτού του
+μοντέλου με βάση τις συχνοτικές του ιδιότητες και ύστερα την επεξεργασία του
 μοντέλου χρησιμοποιώντας τις ιδιότητες αυτές. Στην πρώτη φάση της ανάλυσης θα
 χρησιμοποιηθούν τεχνικές όπως η εύρεση του Laplacian Matrix του μοντέλου, η ανάλυση
 ιδιοδιανυσμάτων αυτού του πίνακα και η οπτικοποίηση των αποτελεσμάτων, προκειμένου να
@@ -55,7 +55,8 @@ Fourier που χρησιμοποιείται στην ανάλυση σημάτ
 δηλαδή η θέση των κορυφών και όχι μόνο πως συνδέονται,
 οι οποίοι ονομάζονται γεωμετρικοί (geometric).
 
-Σε αυτή την εργασία έχουν χρησιμοποιηθεί δύο μέθοδοι για την εύρεση του Laplacian Matrix.
+Σε αυτή την εργασία έχουν χρησιμοποιηθεί δύο μέθοδοι για την εύρεση του Laplacian Matrix
+που βρίσκονται και οι δύο στην κατηγορία των combinatorial.
 Είναι οι Graph Laplacian Matrix και Tutte Laplacian Matrix
 
 \subsubsection{Graph Laplacian Matrix}
@@ -63,26 +64,26 @@ Fourier που χρησιμοποιείται στην ανάλυση σημάτ
 \begin{enumerate}
 	\item Adjacency Matrix που ορίζεται ως
 		\[
-			A_i_j = \begin{cases}
+			A_{ij} = \begin{cases}
 				1 \quad if \; (i, j) \in E \\
 				0 \quad otherwise
 			\end{cases}
 		\]
 
-		Όπου δηλαδή σε για κάθε κορυφή i, j αν υπάρχει ακμή μεταξύ τους
-		(αν το ζεύγος (i,j) βρήσκεται στο σύνολο Ε των ακμών)
-		τότε στις θέσεις [i, j] και [j, i] του πίνακα Α τοποθετείται ο αριθμός 1,
+		όπου δηλαδή σε για κάθε κορυφή $i, j$ αν υπάρχει ακμή μεταξύ τους
+		(αν το ζεύγος $(i,j)$ βρήσκεται στο σύνολο $E$ των ακμών)
+		τότε στις θέσεις $[i, j]$ και $[j, i]$ του πίνακα Α τοποθετείται ο αριθμός 1,
 		αλλιώς τοποθετείται ο αριθμός 0
 
 	\item Degree Matrix που ορίζεται ως
 		\[
-			D_i_j = \begin{cases}
+			D_{ij} = \begin{cases}
 				N(i) \quad if \ i=j \\
 				0 \quad otherwise
 			\end{cases}
 		\]
 
-		και $N(i)$ ο αριθμός των κορυφών με τους οποίους γειτονεύει η κορυφή $i$
+		όπου $N(i)$ ο αριθμός των κορυφών με τους οποίους γειτονεύει η κορυφή $i$
 \end{enumerate}
 
 \noindent
@@ -102,7 +103,19 @@ Fourier που χρησιμοποιείται στην ανάλυση σημάτ
 \]
 
 \subsection{Ανάλυση Ιδιοδιανυσμάτων}
+Το επόμενο βήμα στη συχνοτική ανάλυση είναι να πάρουμε τον Laplacian Matrix,
+όπως αυτός ορίστηκε πιο πάνω και να εκτελέσουμε σε αυτόν ανάλυση ιδιοδιανυσμάτων.
+Δηλαδή θέλουμε να βρούμε τις ιδιοτιμές αυτού του πίνακα και τα αντίστοιχα ιδιοδιανύσματα.
 
+Στη συνέχεια ταξινομούμε αυτά τα ζευγάρια με βάση την ιδιοτιμή σε αύξουσα σειρά,
+οπότε λέμε ότι για τις μικρές ιδιοτιμές τα ιδιοδιανύσματα είναι οι χαμηλόσυχνες
+συνιστώσες του μοντέλου,
+ενώ για τις μεγάλες ιδιοτιμές τα ιδιοδιανύσματα είναι οι υψίσυχνες συνιστώσες του μοντέλου.
+Τα πρώτα είναι υπεύθυνα για τον σχηματισμό του γενικότερου σχήματος του μοντέλου
+(π.χ. αν το μοντέλο είναι ένα άλογο, τότε από τις χαμηλές ιδιοτιμές σχηματίζονται το
+σώμα, το κεφάλι και τα πόδια), ενώ τα δεύτερα είναι υπεύθυνα για τις λεπτομέρειες στην
+επιφάνεια του μοντέλου (π.χ. τα ρουθούνια στο κεφάλι του αλόγου,
+ή αν είναι αρκετά μεγάλη η ανάλυση, η υφή του δέρματος).
 
 \subsection{Οπτικοποίηση Ιδιοδιανυσμάτων}
 
