--- a/final/report.tex
+++ b/final/report.tex
@@ -176,6 +176,16 @@ Fourier που χρησιμοποιείται στην ανάλυση σημάτ
 \end{figure}
 
 \section{Εξομάλυνση μοντέλου}
+Η βασική ιδέα για την εξομάλυνση του μοντέλου είναι αρκετά απλή. Η τραχύτητα που
+προστέθηκε στο μοντέλο με τον θόρυβο επηρεάζει κυρίως τις επιφανειακές λεπτομέρειες
+του μοντέλου - τα οποία χαρακτηριστικά επηρεάζονται από τις υψίσυχνες συνιστώσες -
+ενώ το βασικό σχήμα παραμένει το ίδιο. Οπότε αν χρησιμοποιήσουμε μόνο τις
+χαμηλόσυχνες συνιστώσες για να μετασχηματίσουμε το μοντέλο στο πεδίο της συχνότητας και
+πάλι
+
+\begin{enumerate}
+	\item
+\end{enumerate}
 
 
 \section{Εύρεση όμοιων επιστρώσεων}
