--- a/final/report.tex
+++ b/final/report.tex
@@ -1,11 +1,11 @@
-\documentclass{article}
+\documentclass[draft]{article}
 
 \usepackage[greek]{babel}
 
 \usepackage[a4paper, margin=1.10in]{geometry}
 
 \usepackage{graphicx}
-\graphicspath{ {./images/} }
+\graphicspath{ {./images} }
 \usepackage{amsmath}
 \usepackage{subcaption}
 
@@ -121,18 +121,49 @@ Fourier που χρησιμοποιείται στην ανάλυση σημάτ
 ή αν είναι αρκετά μεγάλη η ανάλυση, η υφή του δέρματος).
 
 \subsection{Οπτικοποίηση Ιδιοδιανυσμάτων}
+Κάθε ιδιοδιάνυσμα που προκύπτει από τη συχνοτική ανάλυση επηρεάζει με διαφορετικό τρόπο
+τις κορυφές του μοντέλου. Η επιρροή ενός ιδιοδιανύσματος μπορεί να την οπτικοποιηθεί
+χρησιμοποιώντας τις συνιστώσες του. Επειδή το πλήθος των συνιστώσεων είναι ίσο με το
+πλήθος των κορυφών του μοντέλου, κάθε συνιστώσα αντιστοιχεί σε μια κορυφή.
+Άρα πραγματοποιήται κανονικοποίηση των συνιστωσών, έτσι ώστε όλες οι συνιστώσες να
+βρίσκονται στο διάστημα [0,1] και σε κάθε τιμή αντιστοιχίζεται ένα χρώμα
+από μια γραμμική κλίμακα χρωμάτων (colour gradient). Το τελικό αποτέλεσμα φαίνεται στα
+Σχήματα \ref{fig:vis1} \ref{fig:vis2} για τα χαμηλόσυχνα ιδιοδιανύσματα και στα Σχήματα
+\ref{fig:vis3} \ref{fig:vis4} για τα υψίσυχνα ιδιοδιανύσματα.
 
 \begin{figure}[h]
 	\begin{subfigure}{0.5\textwidth}
-		% \includegraphics[width=0.9\linewidth]{"low_frequency.png"}
-		\caption{Χαμηλόσυχνα ιδιοδιανύσματα}
+		\includegraphics[width=0.9\linewidth]{"vl_freq.png"}
+		\caption{Πολύ χαμηλόσυχνα ιδιοδιανύσματα}
+		\label{fig:vis1}
 	\end{subfigure}
 	\begin{subfigure}{0.5\textwidth}
-		% \includegraphics[width=0.9\linewidth]{"high_frequency.png"}
+		\includegraphics[width=0.9\linewidth]{"l_freq.png"}
+		\caption{Χαμηλόσυχνα ιδιοδιανύσματα}
+		\label{fig:vis2}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"h_freq.png"}
 		\caption{Υψίσυχνα ιδιοδιανύσματα}
+		\label{fig:vis3}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"vh_freq.png"}
+		\caption{Πολύ υψίσυχνα ιδιοδιανύσματα}
+		\label{fig:vis4}
 	\end{subfigure}
 	\caption{Οπτικοποίηση της επιρροής των ιδιοδιανυσμάτων στο μοντέλο}
 \end{figure}
+
+Στην οπτικοποίηση των ιδιοδιανυσμάτων παρατηρείται η δημιουργία μοτίβων στα χρώματα.
+Μέσω αυτών των μοτίβων αναδυκνύεται η αρμονική συμπεριφορά των ιδιοδιανυσμάτων, αφού τα
+χρώματα δεν αλλάχουν απότομα αλλά με ημιτονοειδή τρόπο. Φαίνεται επίσης η αναλογία
+των ιδιοδιανυσμάτων με τη συχνότητα, αφού στα πιο χαμηλόσυχνα ιδιοδιανύσματα
+τα μοτίβα που δημιουργούνται καλύπτουν μεγάλες περιοχές του μοντέλου, άρα μπορούμε
+να πούμε ότι παρουσιάζουν μικρή λεπτομέρεια. Αντιθέτως στα υψίσυχνα ιδιοδιανύσματα τα μοτίβα
+καλύπτουν μικρότερες περιοχές, άρα μπορούμε να πούμε ότι παρουσιάζουν μεγάλη λεπτομέρεια.
+Η παρατήρηση αυτή ενισχύει το επιχείρημα ότι τα χαμηλόσυχνα ιδιοδιανύσματα ευθύνονται για
+το γενικότερο σχήμα του μοντέλου, ενώ τα υψίσυχνα για τις λεπτομέρειες.
 
 
 \section{Προσθήκη θορύβου}
@@ -161,15 +192,15 @@ Fourier που χρησιμοποιείται στην ανάλυση σημάτ
 
 \begin{figure}[h]
 	\begin{subfigure}{0.5\textwidth}
-		% \includegraphics[width=0.9\linewidth]{"original_model.png"}
+		\includegraphics[width=0.9\linewidth]{"original_model.png"}
 		\caption{Αρχικό μοντέλο}
 	\end{subfigure}
 	\begin{subfigure}{0.5\textwidth}
-		% \includegraphics[width=0.9\linewidth]{"gaussian_noise.png"}
+		\includegraphics[width=0.9\linewidth]{"gaussian_noise.png"}
 		\caption{Μοντέλο με Gaussian Noise}
 	\end{subfigure}
 	\begin{subfigure}{0.5\textwidth}
-		% \includegraphics[width=0.9\linewidth]{"perlin_noise.png"}
+		\includegraphics[width=0.9\linewidth]{"perlin_noise.png"}
 		\caption{Μοντέλο με Perlin Noise}
 	\end{subfigure}
 	\caption{Παράδειγμα εφαρμογής Θορύβου σε μοντέλο}
@@ -179,14 +210,45 @@ Fourier που χρησιμοποιείται στην ανάλυση σημάτ
 Η βασική ιδέα για την εξομάλυνση του μοντέλου είναι αρκετά απλή. Η τραχύτητα που
 προστέθηκε στο μοντέλο με τον θόρυβο επηρεάζει κυρίως τις επιφανειακές λεπτομέρειες
 του μοντέλου - τα οποία χαρακτηριστικά επηρεάζονται από τις υψίσυχνες συνιστώσες -
-ενώ το βασικό σχήμα παραμένει το ίδιο. Οπότε αν χρησιμοποιήσουμε μόνο τις
-χαμηλόσυχνες συνιστώσες για να μετασχηματίσουμε το μοντέλο στο πεδίο της συχνότητας και
-πάλι
+ενώ το βασικό σχήμα παραμένει το ίδιο. Οπότε μπορούμε να χρησιμοποιήσουμε μόνο τα
+χαμηλόσυχνα ιδιοδιανύσματα για να μετασχηματίσουμε το μοντέλο στο πεδίο της συχνότητας και
+πάλι πίσω στο πεδίο του χώρου. Με αυτόν τον τρόπο εξαλείφουμε την επιρροή των υψίσυχνων
+ιδιοδιανυσμάτων και άρα αφαιρούμε τον θόρυβο από το μοντέλο
 
-\begin{enumerate}
-	\item
-\end{enumerate}
+Ο μετασχηματισμός των κορυφών του μοντέλου γίνεται με τον τύπο
 
+\[
+	V' = UU^TV
+\]
+
+όπου:
+\begin{itemize}
+	\item $V$ ο πίνακας με τις αρχικές θέσεις των κορυφών
+	\item $V'$ ο πίνακας με τις τελικές θέσεις των κορυφών
+	\item $U$ ο πίνακας με τα επιλεγμένα ιδιοδιανύσματα
+		(στην προκειμένη περίπτωση τα χαμηλόσυχνα)
+\end{itemize}
+
+\begin{figure}[h]
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"noisy_mesh.png"}
+		\caption{Θορυβώδες μοντέλο}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"simplified_mesh.png"}
+		\caption{Εξομαλυνμένο μοντέλο (χρήση 250 ιδιοδιανυσμάτων)}
+	\end{subfigure}
+	\begin{subfigure}{0.5\textwidth}
+		\includegraphics[width=0.9\linewidth]{"simplified_mesh.png"}
+		\caption{Εξομαλυνμένο μοντέλο (χρήση 1000 ιδιοδιανυσμάτων)}
+	\end{subfigure}
+	\label{fig:simplify}
+	\caption{Παράδειγμα εξομαλυνσης μοντέλου}
+\end{figure}
+
+Όπως φαίνεται στο Σχήμα \ref{fig:simplify}, η εξομάλυνση δεν είναι τέλεια
+(τουλάχιστον όταν χρησιμοποιούνται λίγα ιδιοδιανύσματα), αλλά βελτιώνεται όσο
+περισσότερα ιδιοδιανύσματα χρησιμοποιηθούν.
 
 \section{Εύρεση όμοιων επιστρώσεων}
 
